Added the Version Handler Route
