# rest/models/version.go
@@ -1,0 +1,62 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+)
+
+// Version version
+// swagger:model Version
+
+type Version struct {
+
+	// build date
+	BuildDate string `json:"buildDate,omitempty"`
+
+	// commit hash
+	CommitHash string `json:"commitHash,omitempty"`
+
+	// release version
+	ReleaseVersion string `json:"releaseVersion,omitempty"`
+}
+
+/* polymorph Version buildDate false */
+
+/* polymorph Version commitHash false */
+
+/* polymorph Version releaseVersion false */
+
+// Validate validates this version
+func (m *Version) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Version) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Version) UnmarshalBinary(b []byte) error {
+	var res Version
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
